Fix dark mode toggle alignment on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -358,8 +358,13 @@ pre code {
   }
 }
 
+.toggle-container {
+  display: flex;
+  align-items: center;
+}
+
 #light-toggle {
-  padding: 0;
+  padding: 0.5rem 1rem;
   border: 0;
   background-color: inherit;
   color: var(--global-text-color);
@@ -367,11 +372,20 @@ pre code {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  margin-left: 0.5rem;
+  width: 100%;
+  margin-left: 0;
 
   &:hover {
     color: var(--global-theme-color);
+  }
+}
+
+@media (min-width: 576px) {
+  #light-toggle {
+    padding: 0;
+    width: auto;
+    height: 100%;
+    margin-left: 0.5rem;
   }
 }
 
